--- a/.github/workflows/reproducibility.yml
+++ b/.github/workflows/reproducibility.yml
@@ -17,15 +17,28 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt
 
-      - name: Generate figures
+      - name: Generate Python figures
         env:
           MPLBACKEND: Agg
         run: python scripts/generate_figures.py
+
+      - name: Install TeX + Poppler for TikZ compilation
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            texlive-latex-base \
+            texlive-latex-recommended \
+            texlive-latex-extra \
+            texlive-pictures \
+            poppler-utils
+
+      - name: Compile TikZ figures
+        run: python scripts/tikz2png.py
 
       - name: Upload diagrams artifact
         uses: actions/upload-artifact@v4
